<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TextView
    android:id="@+id/txtWlcm"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_margin="5dp"
    android:text="@string/welcome"
    android:textSize="20dp"/>
  <TextView
    android:id="@+id/txtScrn"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="8"
    android:layout_margin="5dp"
    android:text="@string/helpmsg"
    android:textSize="20dp"/>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <Button
      android:id="@+id/bttnClr"
      android:layout_width="0dp"
      android:layout_height="fill_parent"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/bttnClr"
      android:textSize="15dp"/>
    <EditText
      android:id="@+id/edtNums"
      android:layout_width="0dp"
      android:layout_height="fill_parent"
      android:layout_weight="2"
      android:layout_margin="5dp"
      android:hint="@string/edthint"
      android:textSize="15dp"
      android:phoneNumber="true"
      android:inputType="number"
      android:maxLength="4"/>
    <Button
      android:id="@+id/bttnGss"
      android:layout_width="0dp"
      android:layout_height="fill_parent"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/bttnGss"
      android:textSize="15dp"/>
  </LinearLayout>
</LinearLayout>
